// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-0 {
  color: pink;
}

<div>
  <div
    class="emotion-0"
  >
    Test
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <div
    class="emotion-0"
  >
    Test
  </div>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  color: #D01E29;
  margin-left: 0.25rem;
}

.emotion-1 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #D01E29;
  margin-top: 0.25rem;
  line-height: 20px;
}

<div>
  <div
    class="emotion-3"
  >
    <label
      class="emotion-1"
      for="test"
    >
      Label
      <span
        class="emotion-0"
        title="Required field"
      >
        *
      </span>
    </label>
    Test
    <div
      class="emotion-2"
      role="alert"
    >
      Error
    </div>
  </div>
</div>
`;
